--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=hotelManagementBackend
 spring.datasource.url=jdbc:mysql://localhost:3306/hotelManagement
 spring.datasource.username=root
-#spring.datasource.password=root
-spring.datasource.password=password
+spring.datasource.password=root
+#spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
